--- a/HeeHeeWeak/Classes/Mine/Views/Mine.storyboard
+++ b/HeeHeeWeak/Classes/Mine/Views/Mine.storyboard
@@ -34,6 +34,9 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="XC9-yV-Ef7">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <textAttributes key="titleTextAttributes">
+                            <color key="textShadowColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                        </textAttributes>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
