获取第一页的数据

--- a/HeeHeeWeak/Classes/Main/Views/Main.storyboard
+++ b/HeeHeeWeak/Classes/Main/Views/Main.storyboard
@@ -29,7 +29,8 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <navigationItem key="navigationItem" title="嘻嘻乐周末" id="VrQ-96-73X"/>
-                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
+                    <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+                    <size key="freeformSize" width="375" height="667"/>
                     <connections>
                         <outlet property="tableView" destination="Eea-tc-3oU" id="z6S-A9-QU9"/>
                     </connections>
